<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCardActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="335dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="271dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/quetionhint"
            android:inputType="text"
            android:textAllCaps="false"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"

            android:hint="@string/hintq1"
            android:inputType="text"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/hintq2"
            android:inputType="text"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/hintq3"
            android:inputType="text"
            android:textSize="30sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/savebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="298dp"
        android:layout_marginBottom="1dp"
        app:srcCompat="@drawable/download_foreground" />

    <ImageView
        android:id="@+id/backHomeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="302dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="3dp"
        app:srcCompat="@drawable/cancel_foreground" />

    <Spinner
        android:id="@+id/answerSelector"
        android:layout_width="199dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="559dp"
        android:layout_marginEnd="194dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="145dp"
        android:entries="@array/answer_options"
        android:scrollbarSize="10dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="202dp"
        android:text="@string/propo"
        android:textAlignment="center" />

</RelativeLayout>